issue #266 & #267 fixed - centre alignment of jobs section

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -7771,6 +7771,7 @@ body .job-view-list{
 				}
 				.jobs-completed{
 					position: relative;
+					display: inline-block;
 					.job-no{
 						height: 60px;
 					    width: 60px;
@@ -7787,7 +7788,7 @@ body .job-view-list{
 						.border-radius(12px);
 						background: @green;
 						position: absolute;
-						bottom: 20px;
+						bottom: 30px;
 						font-size: 11px;
 						color: @white;
 					}
@@ -7797,6 +7798,7 @@ body .job-view-list{
 					}
 				}
 				.time-warp{
+					display: inline-block;
 					.time-circle{
 						height: 60px;
 						width: 60px;
@@ -7823,6 +7825,7 @@ body .job-view-list{
 					}
 				}
 				.missed-job{
+					display: inline-block;
 					.missed-job-no{
 						height: 60px;
 						width: 60px;
@@ -8729,7 +8732,7 @@ a{
 	padding: 5px;
 	display: block !important;
 	.border-radius(4px);
-	background: lighten(@gray, 10%);
+	/*background: lighten(@gray, 10%);*/
 	i{
 		font-size: 20px;
 	}
@@ -8744,6 +8747,11 @@ a{
 			height: 50px;
 		    width: 50px;
 		    line-height: 50px;
+		}
+		.job-status{
+			width: 50px;
+			/*padding: 0 10px;*/
+			font-size: 9px;
 		}
 	}
 	.time-warp{
